@@ -46,7 +46,12 @@ map<string, gBank> read_banks(goptions gemcOpt, map<string, string> allSystems)
 	abank.load_variable("beamPol",    5, "Nd", "Beam Polarization");
 	abank.orderNames();
 	banks["header"] = abank;
-	
+
+	// event header
+	abank = gBank(USER_HEADER_BANK_TAG, "userHeader", "User Header Bank");
+	abank.orderNames();
+	banks["userHeader"] = abank;
+
 	// generated particle infos
 	abank =  gBank(GENERATED_PARTICLES_BANK_TAG, "generated", "Generated Particles");
 	abank.load_variable("pid",           1,  "Ni", "Particle ID");
